# gi_cli

./: README.md  pyproject.toml
contracts/: delivery-manifest.schema.json  eval.schema.json  evidence.schema.json  policy.schema.json  trace.schema.json
docs/: GITHUB_PAGES.md  index.html
docs/architecture/: README.md  wave-1.md
docs/architecture/diagrams/: factory-fit-profiler-architecture.mmd
docs/product/: factory-fit-profiler-product-spec.md
docs/prompts/: README.md  agent-execution-waves.md  original-manifest-review.md  planning-mode-kickoff.md  wave-2-local-agent-mvp.md  wave-4-execution.md
docs/webapp/: app.js  cicd-maturity.html  cicd-maturity.js  contoso-live-demo.md  index.html  jenkins-build-catalog.json  repo.html  sample-company.md  styles.css
fixtures/synthetic-company/: README.md  company.json  delivery-manifest.invalid.json  delivery-manifest.valid.json
src/sdlc_adaptation_agent/: __init__.py  blueprints.py  fixtures.py  inventory.py  local_cli.py  manifest.py  server_cli.py  windows_guide.py
tests/: test_cli_smoke.py
