[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "sdlc-adaptation-agent"
version = "0.1.0"
description = "Fixture-backed CLI skeleton for the Dual-Mode SDLC Adaptation Agent MVP."
requires-python = ">=3.11"

[project.scripts]
sdlc-local = "sdlc_adaptation_agent.local_cli:main"
sdlc-server = "sdlc_adaptation_agent.server_cli:main"
sdlc-windows-guide = "sdlc_adaptation_agent.windows_guide:run_app"

[tool.setuptools.packages.find]
where = ["src"]
